--- a/templates/player/login_form.html
+++ b/templates/player/login_form.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
+
 {% block title %}
   Login
 {% endblock %}
@@ -11,7 +13,7 @@
 
         <p>Please login.</p>
 
-        {{ form }}
+        {{ form | crispy }}
 
         <button type="submit" class="btn btn-success">Sign in</button>
     </form>
