--- a/templates/gameplay/game_detail.html
+++ b/templates/gameplay/game_detail.html
@@ -26,6 +26,17 @@
 
 {% block content %}
     <div class="col-md-5">
+        {% if game.status == "F" %}
+            {{ game.first_player}} ходит
+        {% elif game.status == "S" %}
+            {{ game.second_player}} ходит
+        {% elif game.status == "W" %}
+            {{ game.first_player}} победил!
+        {% elif game.status == "L" %}
+            {{ game.second_player}} победил!
+        {% elif game.status == "D" %}
+            Ничья
+        {% endif %}
         <table class="table table-bordered tictactoe-table">
             {% for row in game.board %}
                 <tr>
@@ -47,7 +58,6 @@
 
     {% if form %}
         <div class = "col-md-4">
-            <h3>Твой ход</h3>
             <form method="post" action="{% url 'gameplay_make_move' game.id %}">
                 {{ form | crispy }}
                 {% csrf_token %}
@@ -55,7 +65,5 @@
                 <button type="submit">Сделать ход</button>
             </form>
         </div>
-    {% else %}
-        <p>Сейчас ходит <b>{{ now_move }}</b>. Ждите</p>
     {% endif %}
 {% endblock %}
