--- a/templates/player/home.html
+++ b/templates/player/home.html
@@ -13,11 +13,11 @@
         <div class="col-md-6">
             <h3>Активные игры</h3>
 
-            <ul class="list-group">
-                {% for g in games %}
-                <a class="list-group-item" href="{{ g.get_absolute_url }}"> Game {{g.id }}: {{g.first_player }} vs {{g.second_player }} </a>
-                {% endfor %}
-            </ul>
+            {% include "player/game_list_snippet.html" with games_list=active_games %}
+
+            <h3>Законченые игры</h3>
+
+            {% include "player/game_list_snippet.html" with games_list=finished_games %}
 
             <p>Нажмите ниже что бы пригласить кого-нибуть сыграть</p>
             <p>
