--- a/templates/player/new_invitation_form.html
+++ b/templates/player/new_invitation_form.html
@@ -12,6 +12,6 @@
 
         {% csrf_token %}
         <br>
-        <button type="submit">Отправить приглашение</button>
+        <button type="submit">Send invitation</button>
     </form>
 {% endblock %}
