--- a/templates/tictactoe/welcome.html
+++ b/templates/tictactoe/welcome.html
@@ -7,8 +7,8 @@ Welcome
 {% block content %}
     <div class="jumbotron">
         <div class="container">
-            <h1>Дратути</h1>
-            <p>Сыграем?</p>
+            <h1>Hello</h1>
+            <p>Make yourself comfortable, log in maybe?</p>
         </div>
     </div>
 {% endblock %}
