--- a/templates/player/accept_invitation_form.html
+++ b/templates/player/accept_invitation_form.html
@@ -1,18 +1,18 @@
 {% extends "base.html" %}
 {% block title %}
-  Подтвердить приглашение
+  Tictactoe invitation
 {% endblock %}
 
 {% block content %}
     <div class="well col-md-6">
         <p>
-            Игрок {{ invitation.from_user }} пригласил вас.
+            Player {{ invitation.from_user }} invited you to play.
         </p>
         <blockquote> <p> {{ invitation.message }} </p></blockquote>
         <form action="" method="post">
             {% csrf_token %}
-            <button type="submit" name="accept" value="ok">Подтвердить</button>
-            <button type="submit" name="deny" value="no">Отказать</button>
+            <button type="submit" name="accept" value="ok">Accept</button>
+            <button type="submit" name="deny" value="no">Decline</button>
         </form>
     </div>
 {% endblock content %}
