--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{% block title %}{% endblock %}</title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1' %}">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
         {% block styling %}
             <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
@@ -21,9 +21,9 @@
             <link rel="stylesheet" href="{% static 'css/main.css' %}">
         {% endblock styling %}
 
-        <script src="{% static 'js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+        <script src="{% static 'js/vendor/modernizr-2.8.3-respond-1.4.2.min.js' %}"></script>
     </head>
-    <body>
+    <body ng-app="tictactoe.demo">
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
@@ -41,16 +41,20 @@
     </nav>
 
 
-    <div class="container">
+        <div class="container">
 
-        {% block content %}
-        {% endblock %}
+            {% block content %}
+            {% endblock %}
 
-    </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        </div> <!-- /container -->
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
         <script src="{% static 'js/vendor/bootstrap.min.js' %}"></script>
 
         <script src="{% static 'js/main.js' %}"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js"></script>
+        <script src="{% static 'js/board.controller.js' %}"></script>
     </body>
 </html>
