--- a/templates/gameplay/game_detail.html
+++ b/templates/gameplay/game_detail.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 
 {% block title %}
-  {{ game.first_player }} vs {{ game.second_player }}
+  {{ game.first_player }} vs {{ game.second_player }} - {{ game.id }}
 {% endblock %}
 
 {% block styling %}
