--- a/templates/gameplay/game_detail.html
+++ b/templates/gameplay/game_detail.html
@@ -36,58 +36,19 @@
 {% endblock styling %}
 
 {% block content %}
-    <div class="col-md-5">
-        {% if game.status == "F" %}
-            {{ game.first_player}} move
-        {% elif game.status == "S" %}
-            {{ game.second_player}} move
-        {% elif game.status == "W" %}
-            {{ game.first_player}} wins!
-        {% elif game.status == "L" %}
-            {{ game.second_player}} wins!
-        {% elif game.status == "D" %}
-            Draw
-        {% endif %}
-        <table class="table table-bordered tictactoe-table">
-                {% for row in game.board %}
-                    <tr>
-                        {% for move in row %}
-                            <td class="tictactoe-cell">
-                                {% if move %}
-                                    {% if move.by_first_player %}
-                                        X
-                                    {% else %}
-                                        O
-                                    {% endif %}
-                                {% endif %}
-                            </td>
-                        {% endfor %}
-                    </tr>
-                {% endfor %}
-        </table>
+    <div class="col-md-5" ng-controller="BoardController">
         {% verbatim %}
-        <table class="table table-bordered tictactoe-table" ng-controller="BoardController">
-                <tr ng-repeat="x in [0, 1, 2]">
+        {{ status_message }}
+        <table class="table table-bordered tictactoe-table" >
+                <tr ng-repeat="rows in board">
                     <td class="tictactoe-cell"
-                        ng-click="test1($parent.$index, $index)"
-                        ng-repeat="y in [0, 1, 2]"
-                        ng-model="cellValue"
-                        ng-init="initCells()">
-                        {{cellValue}}
+                        ng-click="test1(cell)"
+                        ng-repeat="cell in rows">
+                        {{ cell.val }}
                     </td>
                 </tr>
         </table>
+        <p ng-repeat="move in moves">{{ move.id }}</p>
         {% endverbatim %}
     </div>
-
-    {% if form %}
-        <div class = "col-md-4">
-            <form method="post" action="{% url 'gameplay_make_move' game.id %}">
-                {{ form | crispy }}
-                {% csrf_token %}
-
-                <button type="submit">Make the move</button>
-            </form>
-        </div>
-    {% endif %}
 {% endblock %}
