--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
     </nav>
 
 
-        <div class="container">
+        <div class="container" ng-app="scrumboard.demo">
 
             {% block content %}
             {% endblock %}
