--- a/templates/player/home.html
+++ b/templates/player/home.html
@@ -5,8 +5,8 @@
 {% endblock %}
 
 {% block content %}
-    <h2 class="text-primary">Hello {{ user.username }}</h2>
-    Here is the list of your games
+    <h2>Hello {{ user.username }}</h2>
+    Here is the list of all your games
 
 
     <div class="row">
