--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
                 body {
                     padding-top: 70px;
                     padding-bottom: 20px;
-                    background: linear-gradient(to bottom, #808080, #3fada8);
+                    background: linear-gradient(to bottom right, #108dc7, #ef8e38) fixed;
                 }
             </style>
             <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}">
