--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
             </style>
             <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}">
             <link rel="stylesheet" href="{% static 'css/main.css' %}">
+            <link rel="stylesheet" href="{% static 'css/gameplay/game_detail.css' %}">
         {% endblock styling %}
 
         <script src="{% static 'js/vendor/modernizr-2.8.3-respond-1.4.2.min.js' %}"></script>
@@ -58,6 +59,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js"></script>
         <script src="{% static 'js/tictactoe.module.js' %}"></script>
         <script src="{% static 'js/board.controller.js' %}"></script>
+        <script src="{% static 'js/board.directive.js' %}"></script>
         <script src="{% static 'js/game.list.controller.js' %}"></script>
     </body>
 </html>
