--- a/templates/gameplay/game_detail.html
+++ b/templates/gameplay/game_detail.html
@@ -5,75 +5,6 @@
   {{ game.first_player }} vs {{ game.second_player }} - {{ game.id }}
 {% endblock %}
 
-{% block styling %}
-    {{ block.super }}
-    <style type="text/css">
-        table {
-          width: 300px;
-          border-collapse: collapse;
-        }
-        td {
-          width: 100px;
-          height: 100px;
-          border: 2px solid #222;
-          text-align: center;
-          vertical-align: middle !important;
-            background: radial-gradient(#243B55, #141E30);
-	        font-size: 60px;
-	        color: white;
-        }
-        td:first-of-type {
-          border-left-color: transparent;
-          border-top-color: transparent;
-        }
-        td:nth-of-type(2) {
-          border-top-color: transparent;
-        }
-        td:nth-of-type(3) {
-          border-right-color: transparent;
-          border-top-color: transparent;
-        }
-        tr:nth-of-type(3) td {
-          border-bottom-color: transparent;
-        }
-
-        .tictactoe-cell-active {
-	        cursor: pointer;
-        }
-
-        .tictactoe-cell-active:hover {
-            background: #3d4250;
-            transition: all 0.2s;
-            opacity: 0.3;
-            -webkit-transition: all 0.2s;
-            -moz-transition: all 0.2s;
-        }
-
-        .tictactoe-cell {
-        }
-
-        .status {
-            background: radial-gradient(#243B55, #141E30);
-            font-size: 20px;
-        }
-    </style>
-{% endblock styling %}
-
 {% block content %}
-    <div class="col-md-5" ng-controller="BoardController">
-        {% verbatim %}
-        <div class="badge status">{{ status.message }}</div>
-        <table>
-            <tr ng-repeat="rows in board">
-                <td ng-class="cell.class"
-                    ng-mouseover="mouseOverCell(cell)"
-                    ng-mouseleave="mouseLeaveCell(cell)"
-                    ng-click="cellClick(cell)"
-                    ng-repeat="cell in rows">
-                    {{ cell.val + cell.tempVal }}
-                </td>
-            </tr>
-        </table>
-        {% endverbatim %}
-    </div>
+    <gameboard></gameboard>
 {% endblock %}
