--- a/templates/gameplay/game_detail.html
+++ b/templates/gameplay/game_detail.html
@@ -6,5 +6,5 @@
 {% endblock %}
 
 {% block content %}
-    <gameboard></gameboard>
+    <gameboard ng-init="separateLoad()"></gameboard>
 {% endblock %}
