Home page upd (invitations)

--- a/templates/base.html
+++ b/templates/base.html
@@ -58,8 +58,10 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js"></script>
         <script src="{% static 'js/tictactoe.module.js' %}"></script>
+        <script src="{% static 'js/game.list.service.js' %}"></script>
+        <script src="{% static 'js/invitation.list.service.js' %}"></script>
         <script src="{% static 'js/board.controller.js' %}"></script>
+        <script src="{% static 'js/home.controller.js' %}"></script>
         <script src="{% static 'js/board.directive.js' %}"></script>
-        <script src="{% static 'js/game.list.controller.js' %}"></script>
     </body>
 </html>
