--- a/templates/player/home.html
+++ b/templates/player/home.html
@@ -9,8 +9,8 @@
     Here is the list of all your games
 
 
-    <div class="row">
-        <div class="col-md-6" ng-controller="GameListController">
+    <div class="row" ng-controller="HomeController">
+        <div class="col-md-6">
             {% verbatim %}
             <h3>Active games</h3>
 
@@ -33,29 +33,23 @@
                 </a>
             </div>
 
-            {% endverbatim %}
 
+        </div>
+        <div class="col-md-6">
+            <h3>Active invitations</h3>
+                <div class="list-group bg-info">
+                        <a class="list-group-item list-group-item-info"
+                           ng-repeat="invitation in activeInvitations">
+                            {{ invitation.from_user_username }} invited you to play.
+                        <span class="badge" ng-click="declineInvitation(invitation)">N</span>
+                        <span class="badge" ng-click="acceptInvitation(invitation)">Y</span><br>
+                        </a>
+            {% endverbatim %}
+                </div>
             <p>
                 <a class="btn btn-primary"
                    href="{% url 'player_new_invitation' %}">Send game invitation</a>
             </p>
-        </div>
-        <div class="col-md-6">
-            <h3>Active invitations</h3>
-
-            {% if invitations %}
-                <div class="list-group bg-info">
-                    {% for inv in invitations %}
-                        <a class="list-group-item list-group-item-info" href="{% url 'player_accept_invitation' id=inv.id %}">
-                            {{ inv.from_user.username }} invited you to play.
-                        <span class="badge">N</span>
-                        <span class="badge">Y</span><br>
-                        </a>
-                    {% endfor %}
-                </div>
-            {% else %}
-                <p>No active invitations</p>
-            {% endif %}
         </div>
     </div>
 
