--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
             <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}">
             <link rel="stylesheet" href="{% static 'css/main.css' %}">
             <link rel="stylesheet" href="{% static 'css/gameplay/game_detail.css' %}">
+            <link rel="stylesheet" href="{% static 'css/player/home.css' %}">
         {% endblock styling %}
 
         <script src="{% static 'js/vendor/modernizr-2.8.3-respond-1.4.2.min.js' %}"></script>
