--- a/templates/base.html
+++ b/templates/base.html
@@ -61,6 +61,7 @@
         <script src="{% static 'js/tictactoe.module.js' %}"></script>
         <script src="{% static 'js/game.list.service.js' %}"></script>
         <script src="{% static 'js/invitation.list.service.js' %}"></script>
+        <script src="{% static 'js/user.service.js' %}"></script>
         <script src="{% static 'js/board.controller.js' %}"></script>
         <script src="{% static 'js/home.controller.js' %}"></script>
         <script src="{% static 'js/board.directive.js' %}"></script>
