--- a/static/css/player/home.css
+++ b/static/css/player/home.css
@@ -13,6 +13,26 @@
     cursor: pointer;
 }
 
+.user-move {
+    background: linear-gradient(to bottom right, rgba(0, 177, 0, 0.31), rgba(0, 177, 0, 0.59));
+}
+
+.opponent-move{
+
+}
+
+.game-win{
+
+}
+
+.game-lose{
+
+}
+
+.game-draw{
+
+}
+
 .invitation-yes-button:hover {
     transition: all 0.2s;
     opacity: 0.7;
