--- a/static/css/player/home.css
+++ b/static/css/player/home.css
@@ -14,23 +14,23 @@
 }
 
 .user-move {
-    background: linear-gradient(to bottom right, rgba(0, 177, 0, 0.31), rgba(0, 177, 0, 0.59));
+    background: radial-gradient(rgb(217, 247, 218), rgba(154, 220, 156, 0.85));
 }
 
 .opponent-move{
-
+    background: radial-gradient(rgb(247, 221, 218), rgba(220, 154, 156, 0.85));
 }
 
 .game-win{
-
+    background: radial-gradient(rgb(217, 247, 218), rgba(154, 220, 156, 0.85));
 }
 
 .game-lose{
-
+    background: radial-gradient(rgb(247, 221, 218), rgba(220, 154, 156, 0.85));
 }
 
 .game-draw{
-
+    background: radial-gradient(rgb(217, 218, 247), rgba(154, 156, 220, 0.85));
 }
 
 .invitation-yes-button:hover {
