--- a/templates/player/home.html
+++ b/templates/player/home.html
@@ -19,8 +19,9 @@
                    href="{{ gameObj.absolute_url }}"
                    ng-repeat="gameObj in activeGames"
                    ng-model="gameObj"
+                   ng-init="setCssClass(gameObj)"
                    ng-class="gameObj.class">
-                    {{ gameObj.string }}
+                    {{ gameObj.string }} - [{{ gameObj.status_string }}]
                     <span class="badge badge-move">{{ gameObj.moves_count }}</span><br>
                 </a>
             </div>
@@ -29,9 +30,12 @@
 
             <div class="list-group bg-info">
                 <a class="list-group-item list-group-item-info"
-                   href="{{ game.absolute_url }}" ng-repeat="game in finishedGames">
-                    {{ game.string }}
-                    <span class="badge badge-move">{{ game.moves_count }}</span>
+                   href="{{ gameObj.absolute_url }}" ng-repeat="gameObj in finishedGames"
+                   ng-model="gameObj"
+                   ng-init="setCssClass(gameObj)"
+                   ng-class="gameObj.class">
+                    {{ gameObj.string }} - [{{ gameObj.status_string }}]
+                    <span class="badge badge-move">{{ gameObj.moves_count }}</span>
                 </a>
             </div>
 
@@ -58,7 +62,7 @@
             <p>
                 <select class="form-control" ng-options="user as user.username for user in userList"
                         ng-model="userToInvite" ng-init="">
-                    <option value="">-- Select a use to invite --</option>
+                    <option value="">-- Select a user to invite --</option>
                 </select>
                 <button class="btn btn-primary" ng-click="inviteUser()">Send game invitation</button>
             {% endverbatim %}
