--- a/templates/player/home.html
+++ b/templates/player/home.html
@@ -5,6 +5,13 @@
 {% endblock %}
 
 {% block content %}
+    <div>
+        <textarea id="chat-log" cols="50" rows="20"></textarea><br/>
+        <input id="chat-message-input" type="text" size="49"/><br/>
+        <input id="chat-message-submit" type="button" value="Send"/>
+    </div>
+
+
     <h2>Hello {{ user.username }}</h2>
     Here is the list of all your games
 
