--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
           <div class="container">
             <div class="navbar-header">
-              <a class="navbar-brand" href="/">Django Test</a>
+              <a class="navbar-brand" href="/">TIC-TAC-TOE</a>
             </div>
             <ul class="nav navbar-nav navbar-right">
                 {% if user.is_authenticated %}
