--- a/templates/player/home.html
+++ b/templates/player/home.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 
 {% block title %}
-    Home: {{ user.username }}
+    Welcome {{ user.username }}
 {% endblock %}
 
 {% block content %}
     <div>
-        <textarea id="chat-log" cols="50" rows="20"></textarea><br/>
+        <textarea id="chat-log" cols="50" rows="10"></textarea><br/>
         <input id="chat-message-input" type="text" size="49"/><br/>
         <input id="chat-message-submit" type="button" value="Send"/>
     </div>
@@ -19,6 +19,7 @@
     <div class="row" ng-controller="HomeController">
         <div class="col-md-6">
             {% verbatim %}
+            <button class="btn btn-primary" ng-click="testWS()">Send smth</button>
             <h3>Active games</h3>
 
             <div class="list-group bg-info">
