--- a/static/css/player/home.css
+++ b/static/css/player/home.css
@@ -1,16 +1,15 @@
-.invitation-yes-button {
+.yes-button {
     background: linear-gradient(#0f9b0f, #000000);
     cursor: pointer;
 }
 
-.invitation-no-button {
+.no-button {
     background: linear-gradient(#c31432, #000000);
     cursor: pointer;
 }
 
 .badge-move {
-    background: linear-gradient(#2C5364, #203A43, #0F2027);
-    cursor: pointer;
+    background: linear-gradient(#2C5364, #203A43, #0F2027)
 }
 
 .user-move {
@@ -33,16 +32,46 @@
     background: radial-gradient(rgb(217, 218, 247), rgba(154, 156, 220, 0.85));
 }
 
-.invitation-yes-button:hover {
+.yes-button:hover {
     transition: all 0.2s;
     opacity: 0.7;
     -webkit-transition: all 0.2s;
     -moz-transition: all 0.2s;
 }
 
-.invitation-no-button:hover {
+.no-button:hover {
     transition: all 0.2s;
     opacity: 0.7;
     -webkit-transition: all 0.2s;
     -moz-transition: all 0.2s;
+}
+
+.ttt-spinner {
+  animation-name: spin, depth;
+  animation-timing-function: linear;
+  animation-duration: 1.5s;
+  animation-fill-mode: forwards;
+}
+
+.ttt-inline {
+    display:inline
+}
+
+.spinner {
+  text-align: center;
+  animation-name: spin, depth;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-duration: 3s;
+}
+@keyframes spin {
+  from { transform: rotateX(0deg); }
+  to { transform: rotateX(-180deg); }
+}
+@keyframes depth {
+  0% { text-shadow: 0 0 black; }
+  25% { text-shadow: 1px 0 black, 2px 0 black, 3px 0 black, 4px 0 black, 5px 0 black; }
+  50% { text-shadow: 0 0 black; }
+  75% { text-shadow: -1px 0 black, -2px 0 black, -3px 0 black, -4px 0 black, -5px 0 black; }
+  100% { text-shadow: 0 0 black; transform: rotateX(-180deg);}
 }
