--- a/templates/player/home.html
+++ b/templates/player/home.html
@@ -5,36 +5,49 @@
 {% endblock %}
 
 {% block content %}
-    <h2>Hello {{ user.username }}</h2>
+    <h2 tooltip-html-unsafe="You entered this <strong>strong</strong> element!" tooltip-trigger="mouseenter" tooltip-placement="right">Hello {{ user.username }}</h2>
     Here is the list of all your games
 
 
     <div class="row" ng-controller="HomeController">
         <div class="col-md-6">
             {% verbatim %}
-            <h3>Active games</h3>
 
-            <div class="list-group bg-info">
+            <h5></h5>
+            <div class="ttt-spinner" ng-click="showActiveGames=!showActiveGames">
+                <h3 class="ttt-inline">Active games</h3>
+                <h3 class="ttt-inline" ng-class="ttt-spinner"> ↑ </h3>
+                <h5></h5>
+            </div>
+
+            <div class="list-group bg-info" ng-show="showActiveGames">
                 <a class="list-group-item list-group-item-info user-move"
-                   href="{{ gameObj.absolute_url }}"
                    ng-repeat="gameObj in activeGames"
                    ng-model="gameObj"
                    ng-init="setCssClass(gameObj)"
+                   ng-click="toGamePage(gameObj)"
                    ng-class="gameObj.class">
-                    {{ gameObj.string }} - [{{ gameObj.status_string }}]
+                    <b><u>{{gameObj.first_player_username}}</u></b> vs <b><u>{{gameObj.second_player_username}}</u></b> - [{{ gameObj.status_string }}]
+                    <span class="badge no-button" ng-click="forfeitGame($event, gameObj)" tooltip="test">X</span>
                     <span class="badge badge-move">{{ gameObj.moves_count }}</span><br>
                 </a>
             </div>
 
-            <h3>Finished games</h3>
 
-            <div class="list-group bg-info">
+            <div ng-click="showFinishedGames=!showFinishedGames">
+                <h3 class="ttt-inline">Finished games</h3>
+                <h3 class="ttt-inline" ng-class=""> ↑ </h3>
+                <h5></h5>
+            </div>
+
+            <div class="list-group bg-info" ng-show="showFinishedGames">
                 <a class="list-group-item list-group-item-info"
-                   href="{{ gameObj.absolute_url }}" ng-repeat="gameObj in finishedGames"
+                   href="{{ gameObj.absolute_url }}"
+                   ng-repeat="gameObj in finishedGames"
                    ng-model="gameObj"
                    ng-init="setCssClass(gameObj)"
                    ng-class="gameObj.class">
-                    {{ gameObj.string }} - [{{ gameObj.status_string }}]
+                    <b><u>{{gameObj.first_player_username}}</u></b> vs <b><u>{{gameObj.second_player_username}}</u></b> - [{{ gameObj.status_string }}]
                     <span class="badge badge-move">{{ gameObj.moves_count }}</span>
                 </a>
             </div>
@@ -42,23 +55,27 @@
 
         </div>
         <div class="col-md-6">
-            <h3>Active invitations</h3>
-                <div class="list-group bg-info">
-                    <a class="list-group-item list-group-item-info"
-                       ng-repeat="invitation in activeInvitations">
-                        <b><u>{{ invitation.from_user_username }}</u></b> invited you to play.
-                    <span class="badge invitation-no-button" ng-click="declineInvitation(invitation)">N</span>
-                    <span class="badge invitation-yes-button" ng-click="acceptInvitation(invitation)">Y</span><br>
-                    </a>
-                </div>
-            <h3>Waiting for response</h3>
-                <div class="list-group bg-info">
-                    <a class="list-group-item list-group-item-info"
-                       ng-repeat="invitation in waitingResponseInvitations">
-                        Waiting response from <b><u>{{ invitation.to_user_username }}</u></b>.
-                    <span class="badge invitation-no-button" ng-click="cancelInvitation(invitation)">X</span>
-                    </a>
-                </div>
+            <h3 ng-click="showActiveInvitations=!showActiveInvitations">Active invitations</h3>
+
+            <div class="list-group bg-info" ng-show="showActiveInvitations">
+                <a class="list-group-item list-group-item-info"
+                   ng-repeat="invitation in activeInvitations">
+                    <b><u>{{ invitation.from_user_username }}</u></b> invited you to play.
+                <span class="badge no-button" ng-click="declineInvitation(invitation)">N</span>
+                <span class="badge yes-button" ng-click="acceptInvitation(invitation)">Y</span><br>
+                </a>
+            </div>
+
+            <h3 ng-click="showPendingInvitations=!showPendingInvitations">Waiting for response</h3>
+
+            <div class="list-group bg-info" ng-show="showPendingInvitations">
+                <a class="list-group-item list-group-item-info"
+                   ng-repeat="invitation in waitingResponseInvitations">
+                    Waiting response from <b><u>{{ invitation.to_user_username }}</u></b>.
+                <span class="badge no-button" ng-click="cancelInvitation(invitation)">X</span>
+                </a>
+            </div>
+
             <p>
                 <select class="form-control" ng-options="user as user.username for user in userList"
                         ng-model="userToInvite" ng-init="">
